--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -12,6 +12,48 @@
 <body>
     <header>
         <div class="header">
+
+        <div class="headerbar">
+            <div class="account">
+                <ul>
+                    <a href="">
+                        <li>
+                            <i class="fa-solid fa-house-chimney"></i>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            <i class="fa-solid fa-magnifying-glass searchicon" id="searchicon1"></i>
+                        </li>
+                    </a>
+                    <div class="search" id="searchinput1">
+                        <input type="search">
+                        <i class="fa-solid fa-magnifying-glass srchicon"></i>
+                    </div>
+                    <a href="">
+                        <li>
+                            <i class="fa-solid fa-user" id="user-mb"></i>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+            <div class="nav">
+                <ul>
+                    <a href="">
+                        <li>Home</li>
+                    </a>
+                    <a href="">
+                        <li>About</li>
+                    </a>
+                    <a href="">
+                        <li>Food Menu</li>
+                    </a>
+                    <a href="">
+                        <li>Book Table</li>
+                    </a>
+                </ul>
+            </div>
+        </div>
             <div class="logo">
                 <img src="/Images/honeybee.png" alt="Vegetarian Food"  height: auto;>
     
@@ -44,12 +86,12 @@
                     </a>
                     <a href="#">
                         <li>
-                            <i class= "fa-solid fa-magnifying-glass searchicon" id="searchicon"></i>
+                            <i class= "fa-solid fa-magnifying-glass searchicon" id="searchicon2"></i>
                         </li>
                     </a>
-                    <div class="searc"id= "searchinginput2">
+                    <div class="search"id= "searchinput2">
                         <input type="search">
-                        <i class="fa-solid fa-magnifying-glass searchicon"></i>
+                        <i class="fa-solid fa-magnifying-glass srchicon"></i>
                     </div>
                     <a href="#">
                         <li>
@@ -61,5 +103,6 @@
         </div>
     </header>
     
+    <script src="App.js"></script>
 </body>
 </html>
