Making the first part of the main page

--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -102,6 +102,19 @@
             </div>
         </div>
     </header>
+    <div class="home">
+        <div class="main_slide">
+            <div>
+                <h1>Enjoy <span>Delicious Food</span> in Your Healthy Life.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus eveniet a, consectetur assumenda voluptates, aut neque iusto repellat quos ipsum sunt quo, praesentium laudantium. Assumenda ipsa omnis accusantium nam illum?</p>
+
+                <button class="red_btn">Visit Now <i class="fa-solid fa-arrow-right-long"></i></button>
+            </div>
+            <div>
+                <img src="/Images/Main_Page_Image.jpg" alt="" class="main_image_page">
+            </div>
+        </div>
+    </div>
     
     <script src="App.js"></script>
 </body>
