some images added

--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -141,6 +141,25 @@
                 <button class="white_btn">See Menu</button>
             </div>
         </div>
+        <div class="main_slide2">
+            <div class="foodimg">
+                <img src="/Images/plateOne.jpg" alt="">
+            </div>
+            <div class="question">
+                <h2>Why People Choose Us?</h2>
+            </div>
+            <div>
+                <div class="q_ans">
+                    <div>
+                        <img src="/Images/plateTwo.jpg" alt="">
+                    </div>
+                    <div>
+                        <h4>Choose your favorite</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
     
