--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -114,7 +114,6 @@
                 <img src="/Images/Main_Page_Image.jpg" alt="Delicious Food" class="main_image_page">
             </div>
         </div>
-        <!-- Copy and paste this as much as I want for all of the food items that I want on the menu-->
         <div class="food-items">
             <div class="item">
                 <div>
@@ -143,10 +142,10 @@
         </div>
         <div class="main_slide2">
             <div class="foodimg">
-                <img src="/Images/plateOne.jpg" alt="">
+                <img src="/Images/honeybee.png" alt="">
             </div>
             <div class="question">
-                <h2>Why People Choose Us?</h2>
+                <h2>Why Do People Choose Us?</h2>
             </div>
             <div>
                 <div class="q_ans">
@@ -158,7 +157,66 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
                     </div>
                 </div>
+                <div class="q_ans">
+                    <div>
+                        <img src="/Images/plateTwo.jpg" alt="">
+                    </div>
+                    <div>
+                        <h4>Choose your favorite</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
+                    </div>
+                </div>
+                <div class="q_ans">
+                    <div>
+                        <img src="/Images/plateTwo.jpg" alt="">
+                    </div>
+                    <div>
+                        <h4>Choose your favorite</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
+                    </div>
+                </div>
             </div>
+        </div>
+        
+        <div class="main_slide3">
+            <div class="fav-head">
+                <h3>Our Popular Food Items</h3>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio assumenda at, ipsam neque dolorum ut nobis impedit facere nisi, laboriosam dignissimos ratione quidem. Saepe tempore omnis maiores aspernatur eos.
+            </div>
+            <div class="fav-food">
+                <div class="item">
+                    <div>
+                        <img src="/Images/plateOne.jpg" alt="">
+                    </div>
+                    <h3>Food name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p class="fav-price">$2.90</p>
+                </div>
+                <div class="item">
+                    <div>
+                        <img src="/Images/plateOne.jpg" alt="">
+                    </div>
+                    <h3>Food name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p class="fav-price">$2.90</p>
+                </div>
+                <div class="item">
+                    <div>
+                        <img src="/Images/plateOne.jpg" alt="">
+                    </div>
+                    <h3>Food name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p class="fav-price">$2.90</p>
+                </div><div class="item">
+                    <div>
+                        <img src="/Images/plateOne.jpg" alt="">
+                    </div>
+                    <h3>Food name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p class="fav-price">$2.90</p>
+                </div>
+            </div>
+            <div class="dsgn"></div>
         </div>
     </div>
     
