possible part of the page forf chef reviews

--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -218,6 +218,36 @@
             </div>
             <div class="dsgn"></div>
         </div>
+        <div class="main_slide4">
+            <div class="chef-feed">
+                <h2>Costumer <span style="color: red;">Feedback</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, sed. Inventore corrupti, accusamus dolorum commodi odio illo voluptas in placeat, porro sunt harum eaque at reprehenderit, officiis nam. Eveniet repellendus nisi modi eius optio perferendis architecto, consequuntur vitae alias a dolores earum voluptas soluta cum sapiente iusto dignissimos expedita quis.</p>
+                <div class="chef-detail">
+                    <div>
+                        <img src="/Images/honeybee.png" alt="">
+                    </div>
+                    <div>
+                        <h6>Adan Mendoza</h6>
+                        <p>High-School Student</p>
+                    </div>
+                </div>
+                <div class="chef-vic">
+                    <div>
+                        <i class="fa-solid fa-hand-peace"></i>
+                        <h4>68</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-trophy"></i>
+                        <h4>956</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+                <div class="chef">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </div>
     
     
