--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -248,6 +248,15 @@
                 </div>
             </div>
         </div>
+        <div class="letter">
+            <div class="letter-head">
+                <h2>Subscribe <span>Newsletter</span></h2>
+            </div>
+            <div class="letter-input">
+                <input type="email" placeholder="Pm123@gmail.com">
+            </div>
+            <button class="red_btn">Subscribe</button>
+        </div>
     </div>
     
     
