making the menu buttons work

--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -121,7 +121,10 @@
                 </div>
                 <h3>Food name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
-                <button class="white_btn">See Menu</button>
+
+                <a href="breakfestMenu.html">
+                <button class="white_btnBreakfest">See Menu</button>
+                </a>
             </div>
             <div class="item">
                 <div>
@@ -129,7 +132,9 @@
                 </div>
                 <h3>Food name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
-                <button class="red_btn">See Menu</button>
+                <a href="/MainApp/dinnerMenu.html">
+                    <button class="red_btn">See Menu</button>
+                </a>
             </div>
             <div class="item">
                 <div>
@@ -137,7 +142,9 @@
                 </div>
                 <h3>Food name</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
-                <button class="white_btn">See Menu</button>
+                <a href="beverageMenu.html">
+                    <button class="white_btnBeverages">See Menu</button>
+                </a>
             </div>
         </div>
         <div class="main_slide2">
@@ -259,6 +266,20 @@
         </div>
     </div>
     
+    <div class="footer">
+        <div class="footer-1">
+            <div class="logo">
+                <img src="/Images/honeybee.png" alt="">
+            </div>
+            <address>
+                <p>Email: am925953@aldine-isd.org</p>
+                <p>Adan Mendoza, <br>Street, Houston, Tx </br></p>
+            </address>
+        </div>
+        <div class="footer-2">
+            <h2>Powered by <em>Adan M</em></h2>
+        </div>
+    </div>
     
     <script src="App.js"></script>
 </body>
