working on the beverages menu

--- a/MainApp/beverageMenu.html
+++ b/MainApp/beverageMenu.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="/Templates/header.js"></script>
+    <script src="/Templates/footer.js"></script>
+
+    <link rel="shortcut icon" href="/Images/vegetable_icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beverages Menu</title>
 
     <nav>
         <ul>
@@ -14,9 +19,45 @@
     </nav>
 </head>
 <body>
-    <header>
-        
-    </header>
-
+    <main-header></main-header>
+    <div class="beverages-main">
+        <div class="beverages">
+            <div class="item">
+                <div>
+                    <img src="/Images/plateOne.jpg" alt="">
+                </div>
+                <h3>Food name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.90</p>
+            </div>
+            <div class="item">
+                <div>
+                    <img src="/Images/plateOne.jpg" alt="">
+                </div>
+                <h3>Food name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.90</p>
+            </div>
+            <div class="item">
+                <div>
+                    <img src="/Images/plateOne.jpg" alt="">
+                </div>
+                <h3>Food name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.90</p>
+            </div><div class="item">
+                <div>
+                    <img src="/Images/plateOne.jpg" alt="">
+                </div>
+                <h3>Food name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.90</p>
+            </div>
+            
+        </div>
+        <div class="dsgn"></div>
+    </div>
+    </div>
+    <!-- <main-footer></main-footer> -->
 </body>
 </html>
