All menus, buttons, and about us page done

--- a/MainApp/beverageMenu.html
+++ b/MainApp/beverageMenu.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="/Templates/header.js"></script>
     <script src="/Templates/footer.js"></script>
+    <script src="/MainApp/App.js"></script>
 
     <link rel="shortcut icon" href="/Images/vegetable_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,42 +23,58 @@
     <main-header></main-header>
     <div class="beverages-main">
         <div class="beverages">
-            <div class="item">
+            <div class="item2">
                 <div>
-                    <img src="/Images/plateOne.jpg" alt="">
+                    <img src="/Images/falsaBerryDrink.jpg" alt="">
                 </div>
-                <h3>Food name</h3>
+                <h3>Falsa Berry</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                <p class="price">$2.90</p>
+                <p class="price">$2.99</p>
+            </div>
+            <div class="item2">
+                <div>
+                    <img src="/Images/kiwiDrink.jpg" alt="">
+                </div>
+                <h3>Blueberry with Lime and Mint Leaves</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.99</p>
+            </div>
+            <div class="item2">
+                <div>
+                    <img src="/Images/pexels-giorgi-iremadze-2450631-6597063.jpg" alt="">
+                </div>
+                <h3>Kiwi Drink</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.99</p>
+            </div>
+            <div class="item2">
+                <div>
+                    <img src="/Images/orangeJuice_Peachesontop.jpg" alt="">
+                </div>
+                <h3>Orange Juice with Peaches on top</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.99</p>
+            </div>
+            <div class="item2">
+                <div>
+                    <img src="/Images/berriesWithMintleaves.jpg" alt="">
+                </div>
+                <h3>Berries with Mint Leaves</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                <p class="price">$2.99</p>
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/plateOne.jpg" alt="">
+                    <img src="/Images/strbrry-Drink.jpg" alt="">
                 </div>
-                <h3>Food name</h3>
+                <h3>Strawberry Smoothie</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                <p class="price">$2.90</p>
+                <p class="price">$2.99</p>
             </div>
-            <div class="item">
-                <div>
-                    <img src="/Images/plateOne.jpg" alt="">
-                </div>
-                <h3>Food name</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                <p class="price">$2.90</p>
-            </div><div class="item">
-                <div>
-                    <img src="/Images/plateOne.jpg" alt="">
-                </div>
-                <h3>Food name</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                <p class="price">$2.90</p>
-            </div>
-            
         </div>
         <div class="dsgn"></div>
     </div>
     </div>
-    <!-- <main-footer></main-footer> -->
+    <main-footer></main-footer>
 </body>
 </html>
