--- a/MainApp/index.html
+++ b/MainApp/index.html
@@ -10,26 +10,112 @@
     <title>Food Website | Home</title>
 </head>
 <body>
-    <main-header>
-    </main-header>
+    <header>
+        <div class="header">
+            <div class="headerbar">
+                <div class="account">
+                    <ul>
+                        <a href="">
+                            <li>
+                                <i class="fa-solid fa-house-chimney"></i>
+                            </li>
+                        </a>
+                        <a href="/MainApp/index.html">
+                            <li>
+                                <i class="fa-solid fa-magnifying-glass searchicon" id="searchicon1"></i>
+                            </li>
+                        </a>
+                        <div class="search" id="searchinput1">
+                            <input type="search">
+                            <i class="fa-solid fa-magnifying-glass srchicon"></i>
+                        </div>
+                        <a href="">
+                            <li>
+                                <i class="fa-solid fa-user" id="user-mb"></i>
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <a href="/MainApp/index.html">
+                            <li>Home</li>
+                        </a>
+                        <a href="/MainApp/aboutUs.html">
+                            <li>About</li>
+                        </a>
+                        <a href="/Main/App/index.html#anchor-image">
+                            <li>Food Menu</li>
+                        </a>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="logo">
+                <img src="/Images/honeybee.png" alt="Vegetarian Food">
+            </div>
+            <div class="bar">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-xmark" id="hdcross"></i>
+            </div>
+            <div class="nav">
+                <ul>
+                    <a href="/MainApp/index.html">
+                        <li>Home</li>
+                    </a>
+                    <a href="/MainApp/aboutUs.html">
+                        <li>About</li>
+                    </a>
+                    <a href="/MainApp/index.html#anchor-image">
+                        <li>Food Menu</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="account">
+                <ul>
+                    <a href="/MainApp/index.html">
+                        <li>
+                            <i class="fa-solid fa-house-chimney"></i>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            <i class="fa-solid fa-magnifying-glass searchicon" id="searchicon2"></i>
+                        </li>
+                    </a>
+                    <div class="search" id="searchinput2">
+                        <input type="search">
+                        <i class="fa-solid fa-magnifying-glass srchicon"></i>
+                    </div>
+                    <a href="#">
+                        <li>
+                            <i class="fa-solid fa-user" id="user-lap"></i>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+    </header>
     <div class="home">
         <div class="main_slide">
             <div>
                 <h1>Enjoy <span>Delicious Food</span> in Your Healthy Life.</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus eveniet a, consectetur assumenda voluptates, aut neque iusto repellat quos ipsum sunt quo, praesentium laudantium. Assumenda ipsa omnis accusantium nam illum?</p>
     
-                <button class="red_btn">Visit Now <i class="fa-solid fa-arrow-right-long"></i></button>
+                <a href="/MainApp/index.html#anchor-image">
+                    <button class="red_btn">Visit Now <i class="fa-solid fa-arrow-right-long"></i></button>
+                </a>
             </div>
             <div>
                 <img src="/Images/Main_Page_Image.jpg" alt="Delicious Food" class="main_image_page">
             </div>
         </div>
         <div class="food-items">
-            <div class="item">
+            <div class="item2">
                 <div>
-                    <img src="/Images/menu_itemOne.jpg" alt="food item">
+                    <img src="/Images/Acaibowl.jpg" alt="food item">
                 </div>
-                <h3>Food name</h3>
+                <h3>Breakfast Menu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
 
                 <a href="breakfestMenu.html">
@@ -38,9 +124,9 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/menu_itemTwo.jpg" alt="food item">
+                    <img src="/Images/menu_itemTwo.jpg" alt="food item" id="anchor-image">
                 </div>
-                <h3>Food name</h3>
+                <h3>Dinner Menu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
                 <a href="/MainApp/dinnerMenu.html">
                     <button class="red_btn">See Menu</button>
@@ -48,9 +134,9 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/menu_itemThree.jpg" alt="food item">
+                    <img src="/Images/strbrry-Drink.jpg" alt="food item">
                 </div>
-                <h3>Food name</h3>
+                <h3>Beverage Menu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
                 <a href="beverageMenu.html">
                     <button class="white_btnBeverages">See Menu</button>
@@ -101,36 +187,29 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio assumenda at, ipsam neque dolorum ut nobis impedit facere nisi, laboriosam dignissimos ratione quidem. Saepe tempore omnis maiores aspernatur eos.
             </div>
             <div class="fav-food">
-                <div class="item">
+                <div class="item2">
                     <div>
-                        <img src="/Images/plateOne.jpg" alt="">
+                        <img src="/Images/Hummushdish.jpg" alt="">
                     </div>
-                    <h3>Food name</h3>
+                    <h3>Hummus with Crackers</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                    <p class="fav-price">$2.90</p>
+                    <p class="fav-price">$8.99</p>
                 </div>
                 <div class="item">
                     <div>
                         <img src="/Images/plateOne.jpg" alt="">
                     </div>
-                    <h3>Food name</h3>
+                    <h3>Organic Salad Bowl</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                    <p class="fav-price">$2.90</p>
+                    <p class="fav-price">$10.99</p>
                 </div>
-                <div class="item">
+                <div class="item2">
                     <div>
-                        <img src="/Images/plateOne.jpg" alt="">
+                        <img src="/Images/falsaBerryDrink.jpg" alt="">
                     </div>
-                    <h3>Food name</h3>
+                    <h3>Falsa Berry</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                    <p class="fav-price">$2.90</p>
-                </div><div class="item">
-                    <div>
-                        <img src="/Images/plateOne.jpg" alt="">
-                    </div>
-                    <h3>Food name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
-                    <p class="fav-price">$2.90</p>
+                    <p class="fav-price">$2.99</p>
                 </div>
             </div>
             <div class="dsgn"></div>
