--- a/MainApp/aboutUs.html
+++ b/MainApp/aboutUs.html
@@ -33,8 +33,8 @@
                         <a href="/Images/Resource Page-Adan M (1).pdf">
                             <button class="btn">Resource Page</button>
                         </a>
-                        <a href="">
-                            <button class="btn">Contact Us</button>
+                        <a href="/Images/">
+                            <button class="btn">Appendix Form</button>
                         </a>
                     </div>
                 </div>
