--- a/MainApp/beverageMenu.html
+++ b/MainApp/beverageMenu.html
@@ -15,7 +15,7 @@
 
     <nav>
         <ul>
-            <li><a href="index.html"></a></li>
+            <li><a href="/index.html"></a></li>
         </ul>
     </nav>
 </head>
