--- a/MainApp/beverageMenu.html
+++ b/MainApp/beverageMenu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="/Templates/header.js"></script>
     <script src="/Templates/footer.js"></script>
     <script src="/MainApp/App.js"></script>
