--- a/MainApp/breakfestMenu.html
+++ b/MainApp/breakfestMenu.html
@@ -13,7 +13,7 @@
     <script src="/Templates/header.js"></script>
     <script src="/MainApp/App.js"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Breakfast Menu</title>
 </head>
 <body>
