--- a/MainApp/dinnerMenu.html
+++ b/MainApp/dinnerMenu.html
@@ -12,9 +12,9 @@
     <script src="/Templates/footer.js"></script>
     <script src="/Templates/header.js"></script>
     <script src="/MainApp/App.js"></script>
-    <script src="/MainApp/index.html"></script>
+    <script src="/index.html"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <main-header></main-header>
