--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="/index.html">
                             <li>Home</li>
                         </a>
-                        <a href="/MainApp/aboutUs.html">
+                        <a href="/aboutUs.html">
                             <li>About</li>
                         </a>
                         <a href="/index.html#anchor-image">
@@ -64,7 +64,7 @@
                     <a href="/index.html">
                         <li>Home</li>
                     </a>
-                    <a href="/MainApp/aboutUs.html">
+                    <a href="/aboutUs.html">
                         <li>About</li>
                     </a>
                     <a href="/index.html#anchor-image">
@@ -119,7 +119,7 @@
                 <h3>Breakfast Menu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
 
-                <a href="/MainApp/breakfestMenu.html">
+                <a href="/breakfestMenu.html">
                 <button class="white_btnBreakfest">See Menu</button>
                 </a>
             </div>
@@ -129,7 +129,7 @@
                 </div>
                 <h3>Dinner Menu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
-                <a href="/MainApp/dinnerMenu.html">
+                <a href="/dinnerMenu.html">
                     <button class="red_btn">See Menu</button>
                 </a>
             </div>
@@ -139,7 +139,7 @@
                 </div>
                 <h3>Beverage Menu</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quam?</p>
-                <a href="/MainApp/beverageMenu.html">
+                <a href="/beverageMenu.html">
                     <button class="white_btnBeverages">See Menu</button>
                 </a>
             </div>
