--- a/beverageMenu.html
+++ b/beverageMenu.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/Templates/header.js"></script>
-    <script src="/Templates/footer.js"></script>
-    <script src="/MainApp/App.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="Templates/header.js"></script>
+    <script src="Templates/footer.js"></script>
+    <script src="App.js"></script>
 
-    <link rel="shortcut icon" href="/Images/vegetable_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/vegetable_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 
     <nav>
         <ul>
-            <li><a href="/index.html"></a></li>
+            <li><a href="index.html"></a></li>
         </ul>
     </nav>
 </head>
@@ -25,7 +25,7 @@
         <div class="beverages">
             <div class="item2">
                 <div>
-                    <img src="/Images/falsaBerryDrink.jpg" alt="">
+                    <img src="Images/falsaBerryDrink.jpg" alt="">
                 </div>
                 <h3>Falsa Berry</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -33,7 +33,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/kiwiDrink.jpg" alt="">
+                    <img src="Images/kiwiDrink.jpg" alt="">
                 </div>
                 <h3>Blueberry with Lime and Mint Leaves</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -41,7 +41,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/pexels-giorgi-iremadze-2450631-6597063.jpg" alt="">
+                    <img src="Images/pexels-giorgi-iremadze-2450631-6597063.jpg" alt="">
                 </div>
                 <h3>Kiwi Drink</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -49,7 +49,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/orangeJuice_Peachesontop.jpg" alt="">
+                    <img src="Images/orangeJuice_Peachesontop.jpg" alt="">
                 </div>
                 <h3>Orange Juice with Peaches on top</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -57,7 +57,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/berriesWithMintleaves.jpg" alt="">
+                    <img src="Images/berriesWithMintleaves.jpg" alt="">
                 </div>
                 <h3>Berries with Mint Leaves</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -65,7 +65,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/strbrry-Drink.jpg" alt="">
+                    <img src="Images/strbrry-Drink.jpg" alt="">
                 </div>
                 <h3>Strawberry Smoothie</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
