--- a/breakfestMenu.html
+++ b/breakfestMenu.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 
-    <link rel="shortcut icon" href="/Images/vegetable_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/vegetable_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakfast Menu</title>
 
-    <script src="/Templates/footer.js"></script>
-    <script src="/Templates/header.js"></script>
-    <script src="/MainApp/App.js"></script>
+    <script src="Templates/footer.js"></script>
+    <script src="Templates/header.js"></script>
+    <script src="MainApp/App.js"></script>
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Breakfast Menu</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
         <div class="breakfast">
             <div class="item2">
                 <div>
-                    <img src="/Images/Hummushdish.jpg" alt="">
+                    <img src="Images/Hummushdish.jpg" alt="">
                 </div>
                 <h3>Hummus with Crackers</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -30,7 +30,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/avocadoToast.jpg" alt="">
+                    <img src="Images/avocadoToast.jpg" alt="">
                 </div>
                 <h3>Avocado Toast</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -38,7 +38,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/-bowl-of-oatmeal.jpg" alt="">
+                    <img src="Images/-bowl-of-oatmeal.jpg" alt="">
                 </div>
                 <h3>Oatmeal</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -46,7 +46,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/Acaibowl.jpg" alt="">
+                    <img src="Images/Acaibowl.jpg" alt="">
                 </div>
                 <h3>Acai Bowl</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="item2">
                 <div>
-                    <img src="/Images/slicedKiwi.jpg" alt="">
+                    <img src="Images/slicedKiwi.jpg" alt="">
                 </div>
                 <h3>Sliced Kiwi with Cashew Nuts</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
