--- a/dinnerMenu.html
+++ b/dinnerMenu.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
 
-    <link rel="shortcut icon" href="/Images/vegetable_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/vegetable_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinner Menu</title>
 
-    <script src="/Templates/footer.js"></script>
-    <script src="/Templates/header.js"></script>
-    <script src="/MainApp/App.js"></script>
-    <script src="/index.html"></script>
+    <script src="Templates/footer.js"></script>
+    <script src="Templates/header.js"></script>
+    <script src="App.js"></script>
+    <script src="index.html"></script>
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main-header></main-header>
@@ -22,7 +22,7 @@
         <div class="dinner">
             <div class="item">
                 <div>
-                    <img src="/Images/plateOne.jpg" alt="">
+                    <img src="Images/plateOne.jpg" alt="">
                 </div>
                 <h3>Organic Salad Bowl</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -30,7 +30,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/plateTwo.jpg" alt="">
+                    <img src="Images/plateTwo.jpg" alt="">
                 </div>
                 <h3>Salad</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -38,7 +38,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/menu_itemThree.jpg" alt="">
+                    <img src="Images/menu_itemThree.jpg" alt="">
                 </div>
                 <h3>Healthy Rice Bowl</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -46,7 +46,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/menu_itemTwo.jpg" alt="">
+                    <img src="Images/menu_itemTwo.jpg" alt="">
                 </div>
                 <h3>Organic Nachos</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/menu_itemOne.jpg" alt="">
+                    <img src="Images/menu_itemOne.jpg" alt="">
                 </div>
                 <h3>Vegetable Tostada</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
@@ -62,7 +62,7 @@
             </div>
             <div class="item">
                 <div>
-                    <img src="/Images/exoticSalad.jpg" alt="">
+                    <img src="Images/exoticSalad.jpg" alt="">
                 </div>
                 <h3>Exotic Salad</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
