--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="/Templates/header.js"></script>
-    <script src="/Templates/footer.js"></script>
-    <script src="/MainApp/App.js"></script>
+    <script src="Templates/header.js"></script>
+    <script src="Templates/footer.js"></script>
+    <script src="MainApp/App.js"></script>
 
-    <link rel="shortcut icon" href="/Images/vegetable_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/vegetable_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <meta charset="UTF-8">
@@ -30,16 +30,16 @@
                         Come visit us and experience the joy of great food made with love!
                     </p>
                     <div class="buttons">
-                        <a href="/Images/Resource Page-Adan M (1).pdf">
+                        <a href="Images/Resource Page-Adan M (1).pdf">
                             <button class="btn">Resource Page</button>
                         </a>
-                        <a href="/Images/">
+                        <a href="Images/">
                             <button class="btn">Appendix Form</button>
                         </a>
                     </div>
                 </div>
                 <div class="image">
-                    <img src="/Images/chefArina.jpg" alt="Restaurant" />
+                    <img src="Images/chefArina.jpg" alt="Restaurant" />
                 </div>
         </div>
     </div>
