--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         <div class="main_slide">
             <div>
                 <h1>Enjoy <span>Delicious Food</span> in Your Healthy Life.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus eveniet a, consectetur assumenda voluptates, aut neque iusto repellat quos ipsum sunt quo, praesentium laudantium. Assumenda ipsa omnis accusantium nam illum?</p>
-    
+                <p>Experience the perfect blend of flavors and ambiance. Start your journey into a world of culinary delights with our expertly crafted dishes, made to satisfy every craving.</p>    
                 <a href="index.html#anchor-image">
                     <button class="red_btn">Visit Now <i class="fa-solid fa-arrow-right-long"></i></button>
                 </a>
@@ -163,7 +162,7 @@
                 </div>
                 <div class="q_ans">
                     <div>
-                        <img src="Images/plateTwo.jpg" alt="">
+                        <img src="Images/Acaibowl.jpg" alt="">
                     </div>
                     <div>
                         <h4>Choose your favorite</h4>
@@ -172,7 +171,7 @@
                 </div>
                 <div class="q_ans">
                     <div>
-                        <img src="Images/plateTwo.jpg" alt="">
+                        <img src="Images/exoticSalad.jpg" alt="">
                     </div>
                     <div>
                         <h4>Choose your favorite</h4>
@@ -185,7 +184,6 @@
         <div class="main_slide3">
             <div class="fav-head">
                 <h3>Our Popular Food Items</h3>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio assumenda at, ipsam neque dolorum ut nobis impedit facere nisi, laboriosam dignissimos ratione quidem. Saepe tempore omnis maiores aspernatur eos.
             </div>
             <div class="fav-food">
                 <div class="item2">
@@ -218,7 +216,7 @@
         <div class="main_slide4">
             <div class="chef-feed">
                 <h2>Costumer <span style="color: red;">Feedback</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, sed. Inventore corrupti, accusamus dolorum commodi odio illo voluptas in placeat, porro sunt harum eaque at reprehenderit, officiis nam. Eveniet repellendus nisi modi eius optio perferendis architecto, consequuntur vitae alias a dolores earum voluptas soluta cum sapiente iusto dignissimos expedita quis.</p>
+                <p>Here's what our customers are saying about their experience with us! We take pride in delivering great food and service, and your feedback inspires us to keep improving.</p>
                 <div class="chef-detail">
                     <div>
                         <img src="Images/honeybee.png" alt="">
