--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,7 +33,7 @@
                         <a href="Images/Resource Page-Adan M (1).pdf">
                             <button class="btn">Resource Page</button>
                         </a>
-                        <a href="Images/tsa_-_forms_appendix-complete.pdf">
+                        <a href="Images/TSA_AppendixForm.pdf">
                             <button class="btn">Appendix Form</button>
                         </a>
                     </div>
