farm to table process

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -29,6 +29,13 @@
                         Whether you're looking for a quick bite or a family meal, our menu offers something for everyone.
                         Come visit us and experience the joy of great food made with love!
                     </p>
+
+                    <h2>
+                        Farm-to-Table-Process
+                    </h2>
+                    <p>
+                        Our farm-to-table process begins with sourcing the freshest ingredients from trusted local farms. Every vegetable, herb, and cut of meat is handpicked for quality and sustainability. From there, our chefs carefully prepare each ingredient to highlight its natural flavors, crafting dishes that celebrate the journey from farm to your plate. Freshness, flavor, and care—it's all part of our commitment to you.
+                    </p>
                     <div class="buttons">
                         <a href="Images/Resource Page-Adan M (1).pdf">
                             <button class="btn">Resource Page</button>
